# crewz3r

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  crew_example_games.py  crew_game.py  crew_print.py  crew_tasks.py  crew_types.py  crew_utils.py  experiments.py  graph_colouring.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  server.py  tsconfig.config.json  two_player_game.py  webserver.py  websocket.py  z3_util.py
crew_logic/: crew_example_games.py  crew_game.py  crew_tasks.py  crew_types.py  crew_utils.py  experiments.py  graph_colouring.py  main.py  server.py  z3_util.py
crew_logic/static/scripts/: main.js
crew_logic/static/styles/: main.css
crew_logic/templates/: index.html
crewz3r/: crew_example_games.py  crew_game.py  crew_print.py  crew_tasks.py  crew_utils.py  main.py  server.py
crewz3r/frontend/: index.html
crewz3r/frontend/src/: App.vue  main.ts
crewz3r/frontend/src/components/: EndGameButton.vue  FormName.vue  GenericCardSelection.vue  Lobby.vue  StartGameButton.vue  card_selection_ui.ts
crewz3r/frontend/src/router/: index.ts
crewz3r/frontend/src/views/: CardSelectionView.vue  HomeView.vue  ResultView.vue  TaskOrderSelectionView.vue  TestView.vue  (+1 more)
crewz3r/static/scripts/: main.js
crewz3r/static/styles/: main.css
crewz3r/templates/: index.html
crewz3r/vue_frontend/: index.html
crewz3r/vue_static/: vuetest.js
static/scripts/: main.js
static/styles/: main.css
styles/: main.css
templates/: index.html
tests/: test_crew_game_parameters.py  test_integer_v.py  test_validator.py
